<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_250sdp"
    android:background="@color/white"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/TextBluePoppinsBold18Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/myselfapps_v1_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/kembali"
        style="@style/TextWhitePoppinsBold12Regular"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_version"
        app:layout_constraintStart_toStartOf="@+id/tv_version"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>