<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_bg_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fragment2"
        android:contentDescription="@string/background_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/name_profile"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_name"
        style="@style/TextBlackPoppinsBold14Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/iv_description_profile"
        style="@style/TextBlackPoppins8Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/description_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_name"
        app:layout_constraintStart_toStartOf="@+id/iv_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_name" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_contact_me"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_description_profile">

        <TextView
            style="@style/TextWhitePoppinsBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/contact_me" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/ic_contact"
        app:layout_constraintBottom_toBottomOf="@+id/cv_contact_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_contact_me" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_find_me"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_contact_me">

        <TextView
            style="@style/TextWhitePoppinsBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/find_me" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/cv_find_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_find_me" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_about_apps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_find_me">

        <TextView
            style="@style/TextWhitePoppinsBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/about_apps" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/ic_information"
        app:layout_constraintBottom_toBottomOf="@+id/cv_about_apps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_about_apps" />


</androidx.constraintlayout.widget.ConstraintLayout>