<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".profile.ContactActivity">

    <ImageView
        android:id="@+id/iv_bg_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fragment2"
        android:contentDescription="@string/background_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/iv_description_profile"
        style="@style/TextBlackPoppinsBold18Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/contact_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_description_profile">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_gmail"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/TextWhitePoppinsBold14Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/email" />


    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_whatsapp"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_description_profile">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_whatsapp"
            app:layout_constraintEnd_toEndOf="@+id/cv_whatsapp"
            app:layout_constraintStart_toStartOf="@+id/cv_whatsapp"
            app:layout_constraintTop_toTopOf="@+id/cv_whatsapp" />

        <TextView
            style="@style/TextWhitePoppinsBold14Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/whatsapp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_instagram"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_email">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:src="@drawable/ic_ig"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/TextWhitePoppinsBold14Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/instagram" />

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>